--- a/wwr/Iindex.html
+++ b/wwr/Iindex.html
@@ -48,7 +48,7 @@
 </main>
 <footer>
     <p>Dry Oar &copy; 2024 - Dallin Hipps</p>
-    <p><a href="site-plan-rafting.html">Site Plan</a></p>
+    <p><a href="site-plan-rafting.html">site plan</a></p>
     <p><a href="contactus.html">Contact Us</a></p>
     <div class="social">
         <a href="https://facebook.com">
