--- a/ice-challenges/w05.html
+++ b/ice-challenges/w05.html
@@ -11,6 +11,7 @@
                 align-items: center;
                 max-width: 20%;
                 margin: 5%;
+                width: 25%;
             }
             .content{
                 background-color: rgb(107, 101, 101);
@@ -21,9 +22,8 @@
     </head>
 <div class="content">
     <body style="margin: 0;">
-        <img src="/IMAGES/w05_circles.jpg" width="100%" style="margin: 0;">
-        <img class="bottom_pic" width="25%" src="/IMAGES/w05_ice_image_desk.jpg" >
-        <img class="bottom_pic" width="25%" src="/IMAGES/w05_ice_image_graphic.png" >
-        <img class="bottom_pic" width="25%" src="/IMAGES/w05_ice_image_person.jpg" >
-    </body>
+        <img src="/ice-challenges/images/w05_circles.jpg" width="100%" style="margin: 0;">
+        <img class="bottom_pic" src="/ice-challenges/images/w05_ice_image_desk.jpg" >
+        <img class="bottom_pic" src="/ice-challenges/images/w05_ice_image_graphic.png" >
+        <img class="bottom_pic" src="/ice-challenges/images/w05_ice_image_person.jpg">
 </div>
