--- a/ice-challenges/index.html
+++ b/ice-challenges/index.html
@@ -22,8 +22,8 @@
     </head>
 <div class="content">
     <body style="margin: 0;">
-        <img src="/ice-challenges/images/w05_circles.jpg" width="100%" style="margin: 0;">
-        <img class="bottom_pic" src="/ice-challenges/images/w05_ice_image_desk.jpg" >
-        <img class="bottom_pic" src="/ice-challenges/images/w05_ice_image_graphic.png" >
-        <img class="bottom_pic" src="/ice-challenges/images/w05_ice_image_person.jpg">
+        <img src="/IMAGES/w05_circles.jpg" width="100%" style="margin: 0;">
+        <img class="bottom_pic" src="/IMAGES/w05_ice_image_desk.jpg" >
+        <img class="bottom_pic" src="/IMAGES/w05_ice_image_graphic.png" >
+        <img class="bottom_pic" src="/IMAGES/w05_ice_image_person.jpg">
 </div>
