changed name on ice images folder

--- a/ice-challenges/w06.html
+++ b/ice-challenges/w06.html
@@ -51,7 +51,7 @@
     <div class="text-grid">
         <div class="main-text" id="text">Tart & Sweet</div>
         <div class="sub-text" id="text">Cherries</div>
-        <img src="IMAGES/w06_cherries.png">
+        <img src="ice-images/w06_cherries.png">
         <div class="background"></div>
     </div>
 </head>
