--- a/ice-challenges/w05.html
+++ b/ice-challenges/w05.html
@@ -22,7 +22,7 @@
     </head>
 <div class="content">
     <body style="margin: 0;">
-        <img src="/IMAGES/w05_circles.jpg" width="100%" style="margin: 0;">
+        <img src="ice-images/" width="100%" style="margin: 0;">
         <img class="bottom_pic" src="ice-images/w05_ice_image_desk.jpg" >
         <img class="bottom_pic" src="ice-images/w05_ice_image_graphic.png" >
         <img class="bottom_pic" src="ice-images/w05_ice_image_person.jpg">
