--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <a href="#">Personal Website</a>
         <a href="#">Personal Site plan</a>
         <a href="ice-challenges/">ice challanges</a>
+        <a href="positioning (1)/">pos</a>
     </nav>                 
     <h1>Dallin Hipps</h1>
     <img src="IMAGES/dallinandlela.jpg" alt="Image of myself and my girfriend Lela." width="400"> 
