Page 2 wire fram image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
-        <a href="#">Personal Site plan</a>
+        <a href="personal_site/site_plan.html">Personal Site plan</a>
         <a href="ice-challenges/">ice challanges</a>
         <a href="positioning (1)/">pos</a>
     </nav>                 
