--- a/index.html
+++ b/index.html
@@ -3,21 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD130 Dallin Hipps</title>
+    <title>Dallin Hipps | WDD 130</title>
 </head>
 <body>
-    <nav>
-        <a href="wwr/">White Water Rafting Website</a>
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
-        <a href="personal_site/site_plan.html">Personal Site plan</a>
-        <a href="ice-challenges/">ice challanges</a>
-        <a href="positioning (1)/">pos</a>
-    </nav>                 
-    <h1>Dallin Hipps</h1>
-    <img src="IMAGES/dallinandlela.jpg" alt="Image of myself and my girfriend Lela." width="400"> 
-    <p>This is my second semester here at BYUI. I'm striving for a degree in software engineering. I'm 22 years old and love to fish and hunt. </p>
-    <p>I was born and raised in Arizona and have lived in 6 States since i graduated.</p>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">White Water Rafting Website</a>
+            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Dallin Hipps</h1>
+        <img src="IMAGES/dallinandlela.jpg" alt="Image of myself and my girfriend Lela." width="400"> 
+        <p>This is my 3rd semester here at BYUI. I'm striving for a degree in software engineering. I'm 22 years old and love to fish and hunt. </p>
+        <p>I was born and raised in Arizona and have lived in 6 States since I graduated.</p>
+    </main>
+    <footer>
+        <p>©2024 🐟 Dallin Hipps 🐟 Rexburg, Idaho </p>
+    </footer>
 </body>
 </html>
