--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <h1>Dallin Hipps</h1>
-        <img src="IMAGES/dallinandtenlee.jpg" alt="Image of myself and my girfriend Lela." width="400"> 
+        <img src="images/profile.jpg" alt="Image of myself and my girfriend Tenlee." width="200"> 
         <p>This is my 3rd semester here at BYUI. I'm striving for a degree in software engineering. I'm 22 years old and love to fish and hunt. </p>
         <p>I was born and raised in Arizona and have lived in 6 States since I graduated.</p>
     </main>
