--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The home page for our WDD130 class used as a redirecting page for other prodjects.">
+    <meta name="author" content="Dallin Hipps">
     <link rel="stylesheet" href="styles/styles.css">
     <title>Dallin Hipps | WDD 130</title>
 </head>
@@ -20,6 +22,11 @@
         <p>This is my 3rd semester here at BYUI. I'm striving for a degree in software engineering. I'm 23 years old and love to fish and hunt. </p>
         <p>I was born and raised in Arizona and have lived in 6 States since I graduated.</p>
     </main>
+    <aside>
+        <h2>Arizona</h2>
+        <img src="images/arizonasunset.jpg" alt="Arizona sunset">
+        <p>Arizona has some of the most amazing sunsets I have ever seen. It is located in the south west part of the united states.</p>
+    </aside>
     <footer>
         <p>©2024 🐟 Dallin Hipps 🐟 Rexburg, Idaho </p>
     </footer>
