--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,14 +5,14 @@
     <link rel="stylesheet" href="styles/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Safety | Dry Oar Boating | Home</title>
+    <title>White Water Safety | White Water Rafting | Home</title>
 </head>
 
 <body>
     <div id="content">
         <header>
             <a id="logo_link" href="index.html">
-                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+                <img class="logo" src="images/wrrlogo.png" alt="White Water Rafting Logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
