--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="wwr/">White Water Rafting Website</a>
+            <a href="wwr/index.html">White Water Rafting Website</a>
             <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         </nav>
     </header>
     <main>
         <h1>Dallin Hipps</h1>
         <img src="images/profile.jpg" alt="Image of myself and my girfriend Tenlee." width="200"> 
-        <p>This is my 4rd semester here at BYUI. I'm striving for a degree in software engineering. I'm 23 years old and love to fish and hunt. </p>
+        <p>This is my 4th semester here at BYUI. I'm striving for a degree in software engineering. I'm 23 years old and love to fish and hunt. </p>
         <p>I was born and raised in Arizona and have lived in 6 States since I graduated.</p>
     </main>
     <aside>
